# controllers/Exam.py
@@ -10,14 +10,22 @@ class ExamController:
         exams = self.service.get_exams(course_id)
         return self._get_list_response(exams)
 
-    def handle_create_exam(self, create_exam_info):
-        self.service.create_exam(create_exam_info)
+    def handle_create_exam(self, create_exam_info, user_id):
+        self.service.create_exam(create_exam_info, user_id)
         return {"message": "Exam created successfully",
                 "status": status.HTTP_200_OK}
 
-    def handle_get_draft_exams(self, course_id):
-        exams = self.service.get_draft_exams(course_id)
-        return self._get_list_response(exams)
+    def handle_edit_exam(self, exam_id, edit_exam_data, user_id):
+        self.service.edit_exam(exam_id, edit_exam_data, user_id)
+        return {"message": "Exam edited successfully",
+                "status": status.HTTP_200_OK}
+
+    def handle_publish_exam(self, publish_info, user_id):
+        exam_id = publish_info["exam_id"]
+        course_id = publish_info["course_id"]
+        self.service.publish_exam(exam_id, user_id, course_id)
+        return {"message": "Exam published successfully",
+                "status": status.HTTP_200_OK}
 
     def handle_get_exam_correct(self, exam_id, student_id):
         exam_info = self.service.get_exam_correct(exam_id, student_id)
